--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -1,5 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,1000&family=Roboto:wght@300&display=swap');
+@import "./page-style/Navbar";
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    scroll-behavior:smooth;
+    scroll-padding-top: 100px;
+    font-family: 'Ubuntu', sans-serif;
+    
+    
 }
+
+header{
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: relative;
+}
+
+.login-btn {
+    background-color: #E73823;
+    border: none;
+    color: #ffffff;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
