--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -1,10 +1,11 @@
 .NavBar {
+    margin-top: -5px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     color: #fff;
     padding: 10px;
-    background: #000;
+    background-color:chocolate  ;
     height: 70px;
     z-index: 1;
     position: sticky;
