--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -14,9 +14,10 @@
 
 header{
     width: 100%;
-    height: 100%;
     overflow: auto;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 .login-btn {
