--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+div.login-container{
+    width: 35%;
+    margin:0px auto;
+    background-color: rgba(223, 223, 223, 0.405);
+    height:150px;
+}
