--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -2,4 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+div.login-container {
+  width: 35%;
+  margin: 0px auto;
+  background-color: rgba(223, 223, 223, 0.405);
+  height: 150px;
 }/*# sourceMappingURL=main.css.map */
