added an section bransh and an style for the  sections

--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,1000&family=Roboto:wght@300&display=swap');
 @import "./page-style/Navbar";
+@import "./page-style/sections";
 *{
     margin: 0;
     padding: 0;
