--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -1,5 +1,5 @@
-.NavBar {
 
+.NavBar {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -15,11 +15,9 @@
     list-style: none;
     display: flex;
     padding: 10px;
-  
-
 }
 
- .menu li {
+.menu li {
     margin-right: 40px;
     cursor: pointer;
 }
@@ -33,7 +31,8 @@
 
 .banner{
     width: 100%;
-    height: 350px;
+    height: 300px;
+    margin-bottom: -10px;
 }
 
 section{
