--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -32,6 +32,39 @@
   margin-bottom: -10px;
 }
 
+.logo {
+  width: 100%;
+  height: 75px;
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+
+h1 {
+  margin-top: 2px;
+  color: #fff;
+  font-size: 120%;
+  width: 100%;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-5%, 80%);
+  z-index: 1;
+}
+
+h6 {
+  color: #fff;
+  font-size: 120%;
+  width: 100%;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-5%, 80%);
+  z-index: 1;
+}
+
 section {
   height: 100vh;
 }
