--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -22,7 +22,7 @@
 .menu-btn {
   text-decoration: none;
   color: #fff;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -45,28 +45,25 @@
 h1 {
   margin-top: 2px;
   color: #fff;
-  font-size: 120%;
+  font-size: 140%;
   width: 100%;
   position: absolute;
   top: 10%;
   left: 50%;
-  transform: translate(-5%, 80%);
+  transform: translate(-5%, 90%);
   z-index: 1;
 }
 
-h6 {
+h2 {
+  margin-top: 2px;
   color: #fff;
   font-size: 120%;
   width: 100%;
   position: absolute;
   top: 10%;
   left: 50%;
-  transform: translate(-5%, 80%);
+  transform: translate(-15%, 240%);
   z-index: 1;
-}
-
-section {
-  height: 100vh;
 }
 
 * {
