--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -8,9 +8,6 @@
     background-color:chocolate  ;
     // overflow: auto;
 }
-
-
-
 .menu {
     list-style: none;
     display: flex;
@@ -25,7 +22,7 @@
 .menu-btn {
     text-decoration: none;
     color: #fff;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
 }
 
@@ -46,25 +43,56 @@
 h1{
     margin-top: 2px;
     color: #fff;
-    font-size: 120%;
+    font-size: 140%;
     width: 100%;
     position: absolute;
     top: 10%;
     left: 50%;
-    transform: translate(-5%, 80%);
+    transform: translate(-5%, 90%);
     z-index: 1;
 }
-h6{
+h2{
+    margin-top: 2px;
     color: #fff;
     font-size: 120%;
     width: 100%;
     position: absolute;
     top: 10%;
     left: 50%;
-    transform: translate(-5%, 80%);
+    transform: translate(-15%, 240%);
     z-index: 1;
 }
+// .table{
+//     color: #fff;
+// }
 
-section{
-    height: 100vh;
-}
+
+// @media (max-width: 500px){
+//     .banner{
+//         width: 100%;
+//         height: 100px;
+//         margin-bottom: -10px;
+//     }
+//     .NavBar .menu {
+//         position: fixed;
+//          height: 100vh;
+//          width: 100%;
+//          left: -100%;
+//          top: 0;
+//          background: chocolate;
+//          text-align: center;
+//          padding-top: 70px;
+//          transition: all 0.4s ease;
+//     }
+//     .NavBar .menu.active{
+//         left: 0;
+//     }
+//     .NavBar .menu li {
+//         display: block;
+//     }
+//     .NavBar .menu li a{
+//         display: inline-block;
+//         margin: 20px 0;
+//         font-size: 40px;
+//     }
+// }
