--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -35,6 +35,130 @@ section {
   height: 100vh;
 }
 
+.radio {
+  display: none;
+}
+
+.container {
+  position: relative;
+  max-width: 900px;
+  margin: 5% auto;
+}
+
+.slider {
+  width: 100%;
+  position: absolute;
+  height: 0;
+  padding-top: 56.25%;
+  background-color: #141414;
+  overflow: hidden;
+  border: solid 1px #2e2e2e;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  animation-duration: 1s;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(1.1);
+  transition: 1.3s;
+  animation-duration: 1s;
+}
+
+.caption {
+  position: absolute;
+  width: 100%;
+  left: 5%;
+  top: -100%;
+  color: #ffeb3b;
+  font-weight: 900;
+  font-size: 50px;
+  text-transform: uppercase;
+  letter-spacing: -5px;
+  line-height: 50px;
+  transition: 0.9s;
+}
+
+.caption span {
+  display: block;
+  text-transform: initial;
+  font-size: 30px;
+  font-weight: 300;
+  color: #fff;
+  line-height: 15px;
+}
+
+.dots {
+  width: 100%;
+  position: absolute;
+  bottom: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dots label {
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  margin: 0 10px;
+  border-radius: 50%;
+  opacity: 0.3;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.dots label :hover {
+  opacity: 0;
+}
+
+#radio-1:checked ~ #slide-1,
+#radio-2:checked ~ #slide-2,
+#radio-3:checked ~ #slide-3,
+#radio-4:checked ~ #slide-4,
+#radio-5:checked ~ #slide-5 {
+  opacity: 1;
+}
+
+#radio-1:checked ~ #slide-1 img,
+#radio-2:checked ~ #slide-2 img,
+#radio-3:checked ~ #slide-3 img,
+#radio-4:checked ~ #slide-4 img,
+#radio-4:checked ~ #slide-4 img,
+#radio-5:checked ~ #slide-5 img {
+  transform: scale(1);
+}
+
+#radio-1:checked ~ #slide-1 .caption,
+#radio-2:checked ~ #slide-2 .caption,
+#radio-3:checked ~ #slide-3 .caption,
+#radio-4:checked ~ #slide-4 .caption,
+#radio-5:checked ~ #slide-5 .caption {
+  opacity: 1;
+  top: 7%;
+  font-size: 80px;
+}
+
+#radio-1:checked ~ .dots #label-1,
+#radio-2:checked ~ .dots #label-2,
+#radio-3:checked ~ .dots #label-3,
+#radio-4:checked ~ .dots #label-4,
+#radio-5:checked ~ .dots #label-5 {
+  background-color: #ffeb3b;
+  opacity: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
