--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -35,12 +35,12 @@
 
 .bar {
   display: block;
-  width: 25px;
+  width: 30px;
   height: 3px;
   margin: 5px auto;
   -webkit-animation: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: #fff;
+  background-color: #0000FF;
 }
 
 .banner {
@@ -132,7 +132,7 @@ h2 {
     text-decoration: none;
     display: flex;
     color: #fff;
-    font-size: 17px;
+    font-size: 25px;
     font-weight: bold;
   }
   .banner {
@@ -176,6 +176,10 @@ h2 {
   .hamburger {
     display: block;
   }
+  .button {
+    color: black;
+    font-size: 20px;
+  }
   .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
@@ -185,21 +189,21 @@ h2 {
   .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
-  .active {
-    background-color: #fff;
-    width: 100px;
-    height: 100px;
+  .close-btn {
+    display: none;
   }
   .menu {
     position: fixed;
     left: -100%;
-    top: 70px;
+    top: 50px;
     gap: 0;
     flex-direction: column;
     background-color: chocolate;
     width: 100%;
+    height: 100%;
     text-align: center;
-    transition: 0.3s;
+    align-items: center;
+    transition: all 0.4s ease;
   }
   .menu-btn {
     margin: 16px 0;
