--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -1,4 +1,5 @@
 // Navbar style
+
 .NavBar {
     display: flex;
     justify-content: space-around;
@@ -30,17 +31,20 @@
 .hamburger{
     display: none;
     cursor: pointer;
+   
+    
 }
 .bar{
     display: block;
-    width: 25px;
+    width: 30px;
     height: 3px;
     margin: 5px auto;
     -webkit-animation: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #fff;
+    background-color: #0000FF;
 }
 // banner
+
 .banner{
     width: 100%;
     height: 300px;
@@ -132,7 +136,7 @@ h2{
         text-decoration: none;
         display: flex;
         color: #fff;
-        font-size: 17px;
+        font-size: 25px;
         font-weight: bold;
     }
     .banner{
@@ -176,7 +180,13 @@ h2{
 @media(max-width:500px){
     .hamburger{
         display: block;
+
     }
+    .button{
+        color: black;
+        font-size: 20px;
+    }
+    
     .hamburger.active .bar:nth-child(2){
         opacity: 0;
     }
@@ -187,21 +197,25 @@ h2{
         transform: translateY(-8px) rotate(-45deg);
     } 
 
+    .close-btn{
+        display: none;
+    }
+
     .active{
-        background-color: #fff;
-        width: 100px;
-        height: 100px;
+
     }
     .menu{
         position: fixed;
         left:  -100%;
-        top: 70px;
+        top: 50px;
         gap: 0;
         flex-direction: column;
         background-color: chocolate;
         width: 100%;
+        height: 100%;
         text-align: center;
-        transition: 0.3s;
+        align-items: center;
+        transition:all 0.4s ease;
     }
     .menu-btn{
         margin: 16px 0;
@@ -209,8 +223,6 @@ h2{
     .menu.active{
         left: 0;
     }
-
-    
     .banner{
         display: none;
     }
@@ -224,7 +236,9 @@ h2{
         display: none;
     }
 
+
+    }
+    
     
 
 
-}
