--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -31,29 +31,25 @@
   height: 350px;
 }
 
-section {
-  height: 100vh;
-}
-
 .radio {
   display: none;
 }
 
 .container {
   position: relative;
-  max-width: 900px;
-  margin: 5% auto;
+  right: 80px;
+  max-width: 600px;
+  margin: 10% auto;
 }
 
 .slider {
-  width: 100%;
+  width: 130%;
   position: absolute;
-  height: 0;
+  height: 50;
   padding-top: 56.25%;
   background-color: #141414;
   overflow: hidden;
   border: solid 1px #2e2e2e;
-  box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
 }
 
 .slide {
@@ -74,29 +70,6 @@ section {
   transform: scale(1.1);
   transition: 1.3s;
   animation-duration: 1s;
-}
-
-.caption {
-  position: absolute;
-  width: 100%;
-  left: 5%;
-  top: -100%;
-  color: #ffeb3b;
-  font-weight: 900;
-  font-size: 50px;
-  text-transform: uppercase;
-  letter-spacing: -5px;
-  line-height: 50px;
-  transition: 0.9s;
-}
-
-.caption span {
-  display: block;
-  text-transform: initial;
-  font-size: 30px;
-  font-weight: 300;
-  color: #fff;
-  line-height: 15px;
 }
 
 .dots {
@@ -157,6 +130,12 @@ section {
 #radio-5:checked ~ .dots #label-5 {
   background-color: #ffeb3b;
   opacity: 1;
+}
+
+.responsive {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
 }
 
 * {
