--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -36,20 +36,19 @@
 }
 
 .container {
-  position: relative;
-  right: 80px;
-  max-width: 600px;
-  margin: 10% auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 120vmin;
+  margin: 1% auto;
+  height: 100%;
 }
 
 .slider {
-  width: 130%;
-  position: absolute;
-  height: 50;
-  padding-top: 56.25%;
-  background-color: #141414;
+  width: 100%;
+  position: relative;
+  height: 60vmin;
   overflow: hidden;
-  border: solid 1px #2e2e2e;
 }
 
 .slide {
@@ -64,7 +63,8 @@
 
 .slide img {
   width: 100%;
-  height: 100%;
+  padding: 10px;
+  height: 80%;
   -o-object-fit: cover;
      object-fit: cover;
   transform: scale(1.1);
@@ -75,7 +75,7 @@
 .dots {
   width: 100%;
   position: absolute;
-  bottom: 5%;
+  bottom: 15%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,7 +84,7 @@
 .dots label {
   width: 15px;
   height: 15px;
-  background: #fff;
+  background: #000;
   margin: 0 10px;
   border-radius: 50%;
   opacity: 0.3;
@@ -146,6 +146,10 @@
   scroll-behavior: smooth;
   scroll-padding-top: 100px;
   font-family: "Ubuntu", sans-serif;
+}
+
+body {
+  background-color: #fefefe;
 }
 
 header {
