styling of products card

--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -31,6 +31,50 @@
   height: 350px;
 }
 
+.BroodContainer {
+  display: block;
+  padding: 10px;
+}
+
+.title {
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+}
+
+.prod_container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.prod_wraper {
+  display: flex;
+  flex-direction: column;
+  width: 40vmin;
+  font-size: medium;
+  margin: 1.6rem;
+}
+
+.text {
+  font-size: 13px;
+  margin-top: 10px;
+}
+
+.prod_title {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-top: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .prod_wraper {
+    width: 100%;
+  }
+}
 .radio {
   display: none;
 }
@@ -145,7 +189,7 @@
   text-decoration: none;
   scroll-behavior: smooth;
   scroll-padding-top: 100px;
-  font-family: "Ubuntu", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
