--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -9,7 +9,7 @@
     text-decoration: none;
     scroll-behavior:smooth;
     scroll-padding-top: 100px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     
     
 }
