--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -36,10 +36,16 @@
   padding: 10px;
 }
 
+.title_container {
+  display: flex;
+  justify-content: center;
+}
+
 .title {
-  text-align: center;
   color: #fff;
   background-color: #000;
+  width: 200px;
+  padding: 10px;
 }
 
 .prod_container {
