--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -33,10 +33,6 @@
   cursor: pointer;
 }
 
-span .bar {
-  font-size: 40px;
-}
-
 .bar {
   display: block;
   width: 30px;
@@ -44,7 +40,7 @@ span .bar {
   margin: 5px auto;
   -webkit-animation: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: #0000FF;
+  background-color: chocolate;
 }
 
 .banner {
@@ -180,10 +176,6 @@ h2 {
   .hamburger {
     display: block;
   }
-  .button {
-    color: black;
-    font-size: 20px;
-  }
   .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
@@ -195,9 +187,6 @@ h2 {
   }
   .close-btn {
     display: none;
-  }
-  .active {
-    color: #0000FF;
   }
   .menu {
     position: fixed;
