--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -40,7 +40,7 @@
     margin: 5px auto;
     -webkit-animation: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #0000FF;
+    background-color: chocolate;
 }
 // banner
 
@@ -179,13 +179,7 @@ h2{
 @media(max-width:500px){
     .hamburger{
         display: block;
-
     }
-    .button{
-        color: black;
-        font-size: 20px;
-    }
-    
     .hamburger.active .bar:nth-child(2){
         opacity: 0;
     }
@@ -198,10 +192,6 @@ h2{
 
     .close-btn{
         display: none;
-    }
-
-    .active{
-        color: #0000FF;
     }
     .menu{
         position: fixed;
