--- a/Mees-project/src/assets/page-style/_slideshow.scss
+++ b/Mees-project/src/assets/page-style/_slideshow.scss
@@ -92,7 +92,7 @@
 #radio-3:checked ~ .dots #label-3,
 #radio-4:checked ~ .dots #label-4,
 #radio-5:checked ~ .dots #label-5 {
-  background-color: #ffeb3b;
+  background-color: #ff3beb;
   opacity: 1;
 }
 .responsive {
@@ -100,3 +100,4 @@
   max-width: 400px;
   height: auto;
 }
+
