--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -178,7 +178,7 @@
 #radio-3:checked ~ .dots #label-3,
 #radio-4:checked ~ .dots #label-4,
 #radio-5:checked ~ .dots #label-5 {
-  background-color: #ffeb3b;
+  background-color: #ff3beb;
   opacity: 1;
 }
 
