--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -24,7 +24,7 @@
   text-decoration: none;
   display: flex;
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -44,37 +44,42 @@
 }
 
 .banner {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url("../assets/img/banner.png");
-  background-size: 100%;
-  height: 200px;
-  background-position: center;
+  width: 100%;
+  height: 300px;
+  margin-bottom: -10px;
 }
 
 .logo {
   width: 100%;
   height: 75px;
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 0;
-  margin-top: 12px;
 }
 
 h1 {
   margin-top: 10px;
-  color: #ffffff;
+  color: #fff;
   font-size: 140%;
   width: 100%;
-  position: relative;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-6%, 90%);
   z-index: 1;
 }
 
 h2 {
   margin-top: 15px;
-  color: #ffffff;
+  color: #fff;
   font-size: 120%;
   width: 100%;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-15%, 240%);
   z-index: 1;
 }
 
@@ -82,30 +87,40 @@ h2 {
   .NavBar {
     display: flex;
   }
-  .menu-btn {
-    text-decoration: none;
-    display: flex;
-    color: #fff;
-    font-size: 20px;
-    font-weight: bold;
+  .banner {
+    width: 100%;
+    height: 200px;
+    margin-bottom: -10px;
   }
   .logo {
     width: 100%;
     height: 70px;
+    position: absolute;
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 0;
   }
   h1 {
-    margin-top: 10px;
-    color: #ffffff;
+    margin-top: 8px;
+    color: #fff;
     font-size: 100%;
     width: 100%;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-6%, 90%);
     z-index: 1;
   }
   h2 {
-    margin-top: 10px;
-    color: #fffdfd;
+    margin-top: 2px;
+    color: #fff;
     font-size: 100%;
     width: 100%;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-15%, 240%);
     z-index: 1;
   }
 }
@@ -117,25 +132,43 @@ h2 {
     text-decoration: none;
     display: flex;
     color: #fff;
-    font-size: 18px;
+    font-size: 25px;
     font-weight: bold;
+  }
+  .banner {
+    width: 100%;
+    height: 200px;
+    margin-bottom: -10px;
   }
   .logo {
     width: 100%;
     height: 70px;
+    position: absolute;
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 0;
   }
   h1 {
-    margin-top: 10px;
-    color: #fffbfb;
+    margin-top: 8px;
+    color: #fff;
     font-size: 100%;
     width: 100%;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-10%, 90%);
+    z-index: 1;
   }
   h2 {
     margin-top: 10px;
-    color: #ffffff;
+    color: #fff;
     font-size: 80%;
     width: 100%;
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-19%, 240%);
     z-index: 1;
   }
 }
