--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -1,233 +1,212 @@
 // Navbar style
 
 .NavBar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: #fff;
-    padding: 10px;
-    background-color:chocolate  ;
-    // overflow: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  padding: 10px;
+  background-color:chocolate  ;
+  // overflow: auto;
 }
 .menu {
-    list-style: none;
-    display: flex;
-    padding: 10px;
+  list-style: none;
+  display: flex;
+  padding: 10px;
 }
 
 .menu li {
-    display: inline-block;
-    margin-right: 40px;
-    cursor: pointer;
+  display: inline-block;
+  margin-right: 40px;
+  cursor: pointer;
 }
 
 .menu-btn {
-    text-decoration: none;
-    display: flex;
-    color: #fff;
-    font-size: 20px;
-    font-weight: bold;
+  text-decoration: none;
+  display: flex;
+  color: #fff;
+  font-size: 25px;
+  font-weight: bold;
 }
 .hamburger{
-    display: none;
-    cursor: pointer;
+  display: none;
+  cursor: pointer;
 }
 
 .bar{
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-animation: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: chocolate;
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-animation: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: chocolate;
 }
 // banner
+.banner {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-image: url('../assets/img/banner.png');
+      background-size: 100%;
+      height: 200px;
+      background-position: center;
+      }
 
-.banner{
-    width: 100%;
-    height: 300px;
-    margin-bottom: -10px;
-}
+// .banner-img{
+//     position: relative;
+//     width: 100%;
+//     height: 300px;
+//     margin-bottom: -10px;
+// }
 .logo{
-    width: 100%;
-    height: 75px;
-    position: absolute;
-    top: 8%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 0;
+  width: 100%;
+  height: 75px;
+  z-index: 0;
+  margin-top: 12px;
+
 }
 // banner-tekst
 h1{
-    margin-top: 10px;
-    color: #fff;
-    font-size: 140%;
-    width: 100%;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-6%, 90%);
-    z-index: 1;
+  margin-top: 10px;
+  color: #ffffff;
+  font-size: 140%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 h2{
-    margin-top: 15px;
-    color: #fff;
-    font-size: 120%;
-    width: 100%;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-15%, 240%);
-    z-index: 1;
+  margin-top: 15px;
+  color: #ffffff;
+  font-size: 120%;
+  width: 100%;
+  z-index: 1;
 }
+
+
 
 
 
 @media(max-width:900px){
-    .NavBar{
-        display: flex;
-    }
-    .banner{
-        width: 100%;
-        height: 200px;
-        margin-bottom: -10px;
-    }
-    .logo{
-        width: 100%;
-        height: 70px;
-        position: absolute;
-        top: 8%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 0;
-    }
-    h1{
-        margin-top: 8px;
-        color: #fff;
-        font-size: 100%;
-        width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-6%, 90%);
-        z-index: 1;
-    }
-    h2{
-        margin-top: 2px;
-        color: #fff;
-        font-size: 100%;
-        width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-15%, 240%);
-        z-index: 1;
-    }
+  .NavBar{
+      display: flex;
+  }
+  .menu-btn {
+      text-decoration: none;
+      display: flex;
+      color: #fff;
+      font-size: 20px;
+      font-weight: bold;
+  }
+
+  .logo{
+      width: 100%;
+      height: 70px;
+      z-index: 0;
+  }
+  h1{
+      margin-top: 10px;
+      color: #ffffff;
+      font-size: 100%;
+      width: 100%;
+      z-index: 1;
+  }
+  h2{
+      margin-top: 10px;
+      color: #fffdfd;
+      font-size: 100%;
+      width: 100%;
+      z-index: 1;
+  }
 
 }
 
 @media(max-width:690px){
-    .NavBar{
-        display: flex;
-    }
-    .menu-btn {
-        text-decoration: none;
-        display: flex;
-        color: #fff;
-        font-size: 25px;
-        font-weight: bold;
-    }
-    .banner{
-        width: 100%;
-        height: 200px;
-        margin-bottom: -10px;
-    }
-    .logo{
-        width: 100%;
-        height: 70px;
-        position: absolute;
-        top: 8%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 0;
-    }
-    h1{
-        margin-top: 8px;
-        color: #fff;
-        font-size: 100%;
-        width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-10%, 90%);
-        z-index: 1;
-    }
-    h2{
-        margin-top: 10px;
-        color: #fff;
-        font-size: 80%;
-        width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-19%, 240%);
-        z-index: 1;
-    }
+  .NavBar{
+      display: flex;
+  }
+  .menu-btn {
+      text-decoration: none;
+      display: flex;
+      color: #fff;
+      font-size: 18px;
+      font-weight: bold;
+  }
+  .logo{
+      width: 100%;
+      height: 70px;
+      z-index: 0;
+  }
+  h1{
+      margin-top: 10px;
+      color: #fffbfb;
+      font-size: 100%;
+      width: 100%;
+  }
+  h2{
+      margin-top: 10px;
+      color: #ffffff;
+      font-size: 80%;
+      width: 100%;
+      z-index: 1;
+  }
 }
 
 @media(max-width:500px){
-    .hamburger{
-        display: block;
-    }
-    .hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-    }
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-    } 
+  
+  .hamburger{
+      display: block;
+  }
+  .hamburger.active .bar:nth-child(2){
+      opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1){
+      transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3){
+      transform: translateY(-8px) rotate(-45deg);
+  } 
 
-    .close-btn{
-        display: none;
-    }
-    .menu{
-        position: fixed;
-        left:  -100%;
-        top: 50px;
-        gap: 0;
-        flex-direction: column;
-        background-color: chocolate;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        align-items: center;
-        transition:all 0.4s ease;
-    }
-    .menu-btn{
-        margin: 16px 0;
-    }
-    .menu.active{
-        left: 0;
-    }
-    .banner{
-        display: none;
-    }
-    .logo {
-        display: none;
-    }
-    h1{
-        display: none;
-    }
-    h2{
-        display: none;
-    }
+  .close-btn{
+      display: none;
+  }
+  .menu{
+      position: fixed;
+      left:  -100%;
+      top: 50px;
+      gap: 0;
+      flex-direction: column;
+      background-color: chocolate;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      align-items: center;
+      transition:all 0.4s ease;
+  }
+  .menu-btn{
+      margin: 16px 0;
+  }
+  .menu.active{
+      left: 0;
+  }
+
+  .banner{
+      display: none;
+  }
+  .logo {
+      display: none;
+  }
+  h1{
+      display: none;
+  }
+  h2{
+      display: none;
+  }
 
 
-    }
-    
-    
+  }
+  
+  
 
 
