--- a/Mees-project/src/assets/page-style/_Navbar.scss
+++ b/Mees-project/src/assets/page-style/_Navbar.scss
@@ -7,6 +7,7 @@
     color: #fff;
     padding: 10px;
     background-color: chocolate;
+z-index: 999;
     // overflow: auto;
 }
 .menu {
@@ -25,7 +26,7 @@
     text-decoration: none;
     display: flex;
     color: #fff;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
 }
 .hamburger {
@@ -43,83 +44,76 @@
     background-color: chocolate;
 }
 // banner
-
 .banner {
-    width: 100%;
-    height: 300px;
-    margin-bottom: -10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("../assets/img/banner.png");
+    background-size: 100%;
+    height: 200px;
+    background-position: center;
 }
+
+// .banner-img{
+//     position: relative;
+//     width: 100%;
+//     height: 300px;
+//     margin-bottom: -10px;
+// }
 .logo {
     width: 100%;
     height: 75px;
-    position: absolute;
-    top: 8%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     z-index: 0;
+    margin-top: 12px;
 }
 // banner-tekst
 h1 {
     margin-top: 10px;
-    color: #fff;
+    color: #ffffff;
     font-size: 140%;
     width: 100%;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-6%, 90%);
+    position: relative;
     z-index: 1;
 }
 h2 {
     margin-top: 15px;
-    color: #fff;
+    color: #ffffff;
     font-size: 120%;
     width: 100%;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-15%, 240%);
     z-index: 1;
 }
 
 @media (max-width: 900px) {
     .NavBar {
         display: flex;
+       z-index: 9999;
     }
-    .banner {
-        width: 100%;
-        height: 200px;
-        margin-bottom: -10px;
+    .menu-btn {
+        text-decoration: none;
+        display: flex;
+        color: #fff;
+        font-size: 20px;
+        font-weight: bold;
     }
+
     .logo {
         width: 100%;
         height: 70px;
-        position: absolute;
-        top: 8%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         z-index: 0;
     }
     h1 {
-        margin-top: 8px;
-        color: #fff;
+        margin-top: 10px;
+        color: #ffffff;
         font-size: 100%;
         width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-6%, 90%);
         z-index: 1;
     }
     h2 {
-        margin-top: 2px;
-        color: #fff;
+        margin-top: 10px;
+        color: #fffdfd;
         font-size: 100%;
         width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-15%, 240%);
         z-index: 1;
     }
 }
@@ -132,43 +126,25 @@ h2 {
         text-decoration: none;
         display: flex;
         color: #fff;
-        font-size: 25px;
+        font-size: 18px;
         font-weight: bold;
-    }
-    .banner {
-        width: 100%;
-        height: 200px;
-        margin-bottom: -10px;
     }
     .logo {
         width: 100%;
         height: 70px;
-        position: absolute;
-        top: 8%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         z-index: 0;
     }
     h1 {
-        margin-top: 8px;
-        color: #fff;
+        margin-top: 10px;
+        color: #fffbfb;
         font-size: 100%;
         width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-10%, 90%);
-        z-index: 1;
     }
     h2 {
         margin-top: 10px;
-        color: #fff;
+        color: #ffffff;
         font-size: 80%;
         width: 100%;
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translate(-19%, 240%);
         z-index: 1;
     }
 }
@@ -202,6 +178,7 @@ h2 {
         text-align: center;
         align-items: center;
         transition: all 0.4s ease;
+       
     }
     .menu-btn {
         margin: 16px 0;
@@ -209,6 +186,7 @@ h2 {
     .menu.active {
         left: 0;
     }
+
     .banner {
         display: none;
     }
