popup added - not working yet

--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -13,3 +13,8 @@ div.login-container{
     background-color: rgba(223, 223, 223, 0.405);
     height:150px;
 }
+
+button, input {
+    background-color: rgba(223, 223, 223, 0.6
+    );
+}
