--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -12,4 +12,8 @@ div.login-container {
   margin: 0px auto;
   background-color: rgba(223, 223, 223, 0.405);
   height: 150px;
+}
+
+button, input {
+  background-color: rgba(223, 223, 223, 0.6);
 }/*# sourceMappingURL=main.css.map */
