--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -16,4 +16,12 @@ div.login-container {
 
 button, input {
   background-color: rgba(223, 223, 223, 0.6);
+}
+
+.open {
+  display: none;
+}
+
+.bg-wraper {
+  background-color: rgba(94, 90, 90, 0.219);
 }/*# sourceMappingURL=main.css.map */
