--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -18,3 +18,10 @@ button, input {
     background-color: rgba(223, 223, 223, 0.6
     );
 }
+
+.open{
+    display: none;
+}
+.bg-wraper{
+    background-color: rgba(94, 90, 90, 0.219);
+}
