--- a/Mees-project/src/assets/page-style/_sections.scss
+++ b/Mees-project/src/assets/page-style/_sections.scss
@@ -26,6 +26,7 @@
     flex-wrap: wrap;
     
     
+    
 }
 
 .prod_wraper{
@@ -34,12 +35,15 @@
     width: 40vmin;
     font-size: medium;
     margin: 1.6rem;
-    background-color: rgb(242, 0, 255);
+    background-color: rgba(242, 0, 255, 0.496);
+    
 }
 
 .text{
     font-size: 13px;
     margin-top:10px;
+    padding: 5px;
+    
 }
 
 .prod_title{
@@ -48,6 +52,9 @@
     font-size: 1.2rem;
     font-weight: 700; 
     margin-top:10px;
+    padding: 5px;
+    
+
 
 }
 @media only screen and (max-width: 600px)  {
