adjusting the BroodSection component And anding the style

--- a/Mees-project/src/assets/main.scss
+++ b/Mees-project/src/assets/main.scss
@@ -2,6 +2,7 @@
 @import "./page-style/Navbar";
 @import "./page-style/sections";
 @import "./page-style/slideshow";
+@import "./page-style/Broodsection";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
