adjusting the brood component style and  formating Auth component

--- a/Mees-project/src/assets/page-style/_sections.scss
+++ b/Mees-project/src/assets/page-style/_sections.scss
@@ -10,12 +10,12 @@
     justify-content: center;
 }
 .title{
-    color: #fff;
-    background-color: #000;
+    color: #ffffff;
+    background-color: #F56E28;
+    border-radius: 10px;
     width: 200px;
     padding: 10px;
-
-    
+    text-align: center;  
 }
 .prod_container{
     display: flex;
