--- a/Mees-project/src/assets/main.css
+++ b/Mees-project/src/assets/main.css
@@ -200,10 +200,12 @@ h2 {
 }
 
 .title {
-  color: #fff;
-  background-color: #000;
+  color: #ffffff;
+  background-color: #F56E28;
+  border-radius: 10px;
   width: 200px;
   padding: 10px;
+  text-align: center;
 }
 
 .prod_container {
