--- a/Mees-project/src/assets/page-style/_sections.scss
+++ b/Mees-project/src/assets/page-style/_sections.scss
@@ -8,6 +8,7 @@
 .title_container{
     display: flex;
     justify-content: center;
+    z-index: -1;
 }
 .title{
     color: #ffffff;
@@ -16,6 +17,7 @@
     width: 200px;
     padding: 10px;
     text-align: center;  
+    z-index: -1; 
 }
 .prod_container{
     display: flex;
