--- a/Mees-project/src/assets/page-style/_slideshow.scss
+++ b/Mees-project/src/assets/page-style/_slideshow.scss
@@ -26,6 +26,7 @@
   left: 0;
   opacity: 0;
   animation-duration: 1s;
+  z-index: -1;
 }
 
 .slide img {
@@ -45,6 +46,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: -1;
 }
 
 .dots label {
